# vulkan_experiments

./: Cargo.toml  README.md
examples/: basic.rs  texture.rs
src/: camera.rs  encoder.rs  lib.rs  main.rs  utils.rs
src/shaders/: shader.frag.spv  shader.vert  shader.vert.spv
src/utility/: constants.rs  platforms.rs  structures.rs  window.rs
src/utility/share/: mod.rs  v1.rs
